# life_plus_plus

./: Cargo.toml
.cargo/: config.toml
assets/shaders/: game_of_life.wgsl  layer.wgsl  nca.wgsl
src/: main.rs  nca.rs
src/nca/: render.rs
