[package]
name = "life_plus_plus"
version = "0.1.0"
edition = "2021"

[features]
editor = ["dep:bevy_editor_pls"]

[dependencies]
bevy = { version = "0.8.1" }
bevy_editor_pls = { version = "0.1.1", optional = true }
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
